Lolipop is good

--- a/k.html
+++ b/k.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="kk.css">
-<body>
+<body><center>
     <div class="k">Kashi Don</div>
+</center>
 </body>
 </html>
